<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dr Digital MY</string>
    <string name="hello_world">Hello world!</string>
    <string name="information">Information</string>
    <string name="support">Support</string>
    <string name="location">Locations</string>
    <string name="enquiry">Enquiry</string>
    <string name="notification">Notification</string>
    <string name="when_unexpected_failure_occur">WHEN UNEXPECTED FAILURE OCCUR WE ARE AT YOUR SERVICE</string>
    <string name="action_settings">Settings</string>
    <string name="support_header">Sale Enquiry and In-Store Services</string>
    <string name="support_map">Courts Subang Megastore &lt;Show map&gt;</string>
    <string name="support_phone_number">tel:+84866605741</string>
    <string name="support_open_time">Opens from 10 a.m to 10 p.m daily</string>
    <string name="find_us">Find us at:</string>
    <string name="show_map">Show Map</string>
    <string name="location_name">Location\'s name</string>
    <string name="location_address">Location Address</string>
    <string name="location_phone_number">Locations\' phone number</string>
    <string name="dialog_delete_title">Delete notification</string>
    <string name="dialog_delete_message">Do you want to delete</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>

</resources>