<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="100" >

    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        layout="@layout/layout_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="60"
        android:orientation="vertical"
        android:weightSum="100" >

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/support_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <TextView
            android:id="@+id/fragment_support_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/support_map"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/fragment_support_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/support_phone_number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Red" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/support_open_time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        layout="@layout/layout_bottom" />

</LinearLayout>