<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        layout="@layout/layout_header" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <LinearLayout
        android:id="@+id/fragment_home_support"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="14"
        android:background="@color/red_by_customer"
        android:clickable="true"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="25"
            android:src="@drawable/phone_icon" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="45"
            android:gravity="center"
            android:text="@string/support"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <LinearLayout
        android:id="@+id/fragment_home_enquiry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="14"
        android:background="@color/red_by_customer"
        android:clickable="true"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="25"
            android:src="@drawable/support_icon" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="45"
            android:gravity="center"
            android:text="@string/enquiry"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <LinearLayout
        android:id="@+id/fragment_home_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="14"
        android:background="@color/red_by_customer"
        android:clickable="true"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="25"
            android:src="@drawable/location_icon" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="45"
            android:gravity="center"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="15"
        android:gravity="center"
        android:text="@string/when_unexpected_failure_occur"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color_by_customer"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="8"
        android:background="@color/red_by_customer"
        android:padding="0dp" />

</LinearLayout>